--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,12 +25,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      # Run with Powershell core
       - name: Run a one-line script
-        run: echo %COMPUTERNAME% - Hello
+        run: echo "$env:COMPUTERNAME - I am a git runner ;)"
+        shell: pwsh
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  finish:
+    runs-on: self-hosted
+    steps:
+      - name: Prepare for Shutdown with a grace time of 30 seconds
+        run: shutdown -s -t 30
+        shell: pwsh
+            
