--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout git
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Setup python
         uses: actions/setup-python@v2
