--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,7 +19,12 @@ jobs:
   buildjob:
     # The type of runner that the job will run on
     runs-on: self-hosted
+    continue-on-error: true 
     strategy:
+      # Don't stop when one of the matrix build has failed
+      fail-fast: false
+      # Number of potential github runners to use simultaneously (or else a single runner will use a lot of time
+      max-parallel: 4 
       matrix:
         python-version: [ '2.x', '3.3', '3.4', '3.5', '3.6', '3.7', '3.8', 'pypy-2.7', 'pypy-3.6', 'pypy-3.7' ]
 
