--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,7 +16,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint flake8
     - name: Analysing the code with pylint
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pylint -E `ls -R|grep .py$|xargs` |
+        python -m flake8 hello.py
+        # flake8 normally needs a folder
